Changed the logic of registration through Google for better interaction both through the website and through the application
